--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.html
@@ -25,14 +25,22 @@
               <div class="three wide field">
                 <label>สรรพสามิตพื้นที่</label>
               </div>
-              <div class="five wide field {{ checkValid('area', f) ? 'error' : ''  }} ">
+              <div class="five wide field">
+                <div class="ui input">
+                  <select class="ui selection dropdown ai" name="area" ngModel>
+                    <option value="">เลือกพื้นที่</option>
+                    <option value="{{area.subTypeDescription}}" *ngFor="let area of areas">{{area.subTypeDescription}}</option>
+                  </select>
+                </div>
+              </div>
+              <!-- <div class="five wide field {{ checkValid('area', f) ? 'error' : ''  }} ">
                 <div class="ui input">
                   <select class="ui selection dropdown ai" name="area" required ngModel>
                     <option value="">เลือกพื้นที่</option>
                     <option value="{{area.subTypeDescription}}" *ngFor="let area of areas">{{area.subTypeDescription}}</option>
                   </select>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div class="inline fields">
               <div class="three wide field">
