--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3-1/int02-m3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m3/int02-m3-1/int02-m3-1.component.html
@@ -1,7 +1,44 @@
+<div class="ui modal show transition hidden" style="height: calc(6em + 15px);">
+    <i class="close icon"></i>
+    <div class="header">
+        รายละเอียดด้าน{{qtnHeaderName}}
+    </div>
+    <div class="ui form content">
+        <div class="ui center aligned grid">
+            <div class="row">
+                <div class="column">
+                    <label class="custom-label-w-20">รายการ</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <input type="text" name="showEdit" id="showEdit" [(ngModel)]="showEdit">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="actions">
+        <div class="ui center aligned grid" style="margin: 0px">
+            <div class="eight wide field">
+                <button class="ui small green button" type="button" (click)="onUpdate()">
+                            <i class="save icon"></i> บันทึก
+                        </button>
+            </div>
+
+            <div class="eight wide field">
+                <button class="ui small red button" type="button" id="closeList">
+                            <i class="close icon"></i> ยกเลิก
+                        </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="ui grid" style="margin: 2%">
     <div class="sixteen wide column segments">
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>รายละเอียดด้านการเงิน</span>
+            <span>รายละเอียดด้าน{{qtnHeaderName}}</span>
         </div>
 
         <div class="ui attached segment">
@@ -17,34 +54,32 @@
                         </div>
 
                         <div class="eleven wide field" style="width:100%">
-                            <input type="text" name="mainDetail" id="mainDetail" placeholder="กรูณากรอกข้อหลัก">
+                            <input class="custom" type="text" id="mainDetail" name="mainDetail" [(ngModel)]="mainDetail" [attr.required]="true">
                         </div>
 
                         <div class="two wide field">
-                            <a style="cursor: pointer;color: red">
-                                <i class="close icon"></i>
-                            </a>
+                            &nbsp;
                         </div>
                     </div>
                 </div>
 
-                <div class="field">
+                <div class="field" *ngFor="let min of numbers; let i = index">
                     <div class="inline fields">
                         <div class="four wide field">
                             &nbsp;
                         </div>
 
                         <div class="one wide field">
-                            <label class="custom-label-w-10">ข้อย่อย</label>
+                            <label class="custom-label-w-10">ข้อย่อย[{{ i+1 }}]</label>
                         </div>
 
                         <div class="nine wide field">
-                            <input type="text" name="minorDetail" id="minorDetail" placeholder="กรูณากรอกข้อย่อย">
+                            <input type="text" id="minorDetail{{i}}" name="minorDetail{{i}}" [(ngModel)]="minorDetail[i]">
                         </div>
 
                         <div class="two wide field">
-                            <a style="cursor: pointer;color: red">
-                                <i class="close icon"></i>
+                            <a (click)="onDelField(i)" style="cursor: pointer;color: red">
+                                <i class="delete icon"></i>
                             </a>
                         </div>
                     </div>
@@ -57,8 +92,8 @@
                         </div>
 
                         <div class="one wide field">
-                            <a style="cursor: pointer;color: blue">
-                                <i class="plus icon"></i>
+                            <a class="primary" (click)="onAddField()" style="cursor: pointer;">
+                                <i class="add icon"></i>
                             </a>
                         </div>
 
@@ -73,30 +108,91 @@
                 </div>
 
                 <div class="ui center aligned grid">
-                    <div class="inline fields">
-                        <div class="sixteen wide field">
-                            <button class="ui small black button" type="button" routerLink="/int02/m3">
+                    <div class="row">
+                        <div class="column">
+                            <button class="ui small blue button" type="button" routerLink="/int02/m3">
                                 <i class=" backward icon "></i> กลับ
                             </button>
 
-                            <button class="ui small green button " type="button " id="showList ">
-                                <i class="add icon "></i> เพิ่มข้อหลัก
-                            </button>
-
-                            <button class="ui small blue button " type="button ">
+                            <button class="ui small blue button " type="button" (click)="onSaveData()">
                                 <i class="save icon "></i> บันทึก
                             </button>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
-        <!-- <div class="ui center aligned grid ">
-            <div class="inline fields ">
-               
+        <div class="ui segment">
+            <div class="ui grid">
+                <div class="sixteen wide column">
+                    <label> </label>
+                    <div class="dataTables_scroll">
+                        <div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
+                            <div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 100%; padding-right: 0px;">
+                                <table class="ui small celled table aligned hover dataTable no-footer" role="grid" style="margin-left: 0px; width: 100%;">
+                                    <thead>
+                                        <tr>
+                                            <th style="text-align: left !important ;width: 5%">
+                                                <input type="checkbox" name="chk1" id="chk1" (click)="chkAll($event, 'table', 1)">
+                                            </th>
+                                            <th style="text-align: center !important ;width: 80%">รายการ</th>
+                                            <th style="text-align: center !important ;width: 15%">#</th>
+                                        </tr>
+                                    </thead>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="dataTables_scrollBody" style="position: relative; overflow: auto; max-height: 360px; width: 100%;">
+                            <table class="ui small celled table aligned hover dataTable no-footer" id="datatable" role="grid" style="width: 100%;">
+                                <thead>
+                                    <tr>
+                                        <th style="text-align: left !important ;width: 5%;display: none"></th>
+                                        <th style="text-align: left !important ;width: 80%;display: none"></th>
+                                        <th style="text-align: left !important ;width: 15%;display: none"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let t of table; let i = index">
+                                        <td style="width: 5%;">
+                                            <input type="checkbox" id="chk1-{{i}}" name="chk1-{{i}}" *ngIf="t.qtnReportHdrId" (change)="chck(t.qtnReportManId, 'man', $event, 1, 'table')">
+                                            <input type="checkbox" style="margin-left: 2em" id="chk1-{{i}}" name="chk1-{{i}}" *ngIf="!t.qtnReportHdrId" (change)="chck(t.qtnReportDtlId, 'dtl', $event, 1, 'table')">
+                                        </td>
+                                        <td style="width: 80.8%;">{{t.qtnMainDetail}}</td>
+                                        <td style="width: 15%;">
+                                            <div class="ui center aligned grid">
+                                                <div class="row">
+                                                    <div class="column">
+                                                        <button class="ui tiny blue button" type="button" name="edit-{{i}}" id="edit-{{i}}" (click)="onEditData(t)">
+                                                            <i class="edit icon "></i> แก้ไข
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div> -->
 
+            <div class="ui center aligned grid">
+                <div class="row">
+                    <div class="column">
+                        <button class="ui small blue button" type="button" (click)="onDeleteData()">
+                            <i class="delete icon"></i> ลบ
+                        </button>
+
+                        <button class="ui small blue button " type="button" (click)="onEditData()">
+                            <i class="edit icon"></i> แก้ไข
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
